# tidepool

./: main.py  pyproject.toml
data/BNBUSD/: BNBUSD_part001.csv
data/USDGUSD/: USDGUSD_part001.csv
data_collector/: main.py
data_collector/data/APTUSD/: APTUSD_part001.csv
data_collector/data/ARBUSD/: ARBUSD_part001.csv
data_collector/data/AVAXUSD/: AVAXUSD_part001.csv
data_collector/data/BCHUSD/: BCHUSD_part001.csv
data_collector/data/BONKUSD/: BONKUSD_part001.csv
data_collector/data/EURQEUR/: EURQEUR_part001.csv
data_collector/data/EURQUSD/: EURQUSD_part001.csv
data_collector/data/EURREUR/: EURREUR_part001.csv
data_collector/data/EURRUSD/: EURRUSD_part001.csv
data_collector/data/MOODENGUSD/: MOODENGUSD_part001.csv
data_collector/data/OPUSD/: OPUSD_part001.csv
data_collector/data/ORDIUSD/: ORDIUSD_part001.csv
data_collector/data/PYUSDEUR/: PYUSDEUR_part001.csv
data_collector/data/SHIBUSD/: SHIBUSD_part001.csv
data_collector/data/TOSHIUSD/: TOSHIUSD_part001.csv
data_collector/data/TRXUSD/: TRXUSD_part001.csv
data_collector/data/TURBOUSD/: TURBOUSD_part001.csv
data_collector/data/USDREUR/: USDREUR_part001.csv
data_collector/data/USDRUSD/: USDRUSD_part001.csv
data_collector/data/USDSUSD/: USDSUSD_part001.csv
data_collector/data/WIFUSD/: WIFUSD_part001.csv
